Fixed CompositeDataOutput scope The caller is responsible for resource management of the writer, the output here should only route the data.